[#IC-204] add header info to Certificate objects
