# openapi/index.yaml
@@ -99,6 +99,9 @@ definitions:
       uvci:
         description: Unique identifier of the Certificate
         type: string
+      header_info:
+        description: The header info (title, subtitle, logo)
+        $ref: '#/definitions/HeaderInfo'
       info:
         description: >-
           A markdown-formatted text in which show basic Certificate information
@@ -122,6 +125,7 @@ definitions:
     required:
       - qr_code
       - status
+      - header_info
   RevokedCertificate:
     type: object
     properties:
@@ -133,6 +137,9 @@ definitions:
         type: string
         enum:
           - revoked
+      header_info:
+        description: The header info (title, subtitle, logo)
+        $ref: '#/definitions/HeaderInfo'
       info:
         description: |-
           A human-readable message, in plain text or Markdown format, 
@@ -143,6 +150,7 @@ definitions:
         $ref: '#/definitions/Timestamp'
     required:
       - status
+      - header_info
   ExpiredCertificate:
     type: object
     properties:
@@ -154,6 +162,9 @@ definitions:
         type: string
         enum:
           - expired
+      header_info:
+        description: The header info (title, subtitle, logo)
+        $ref: '#/definitions/HeaderInfo'
       info:
         description: |-
           A human-readable message, in plain text or Markdown format,
@@ -162,6 +173,23 @@ definitions:
     required:
       - status
       - info
+      - header_info
+  HeaderInfo:
+    type: object
+    properties:
+      title:
+        description: Header title
+        type: string
+      subtitle:
+        description: Header subtitle
+        type: string
+      logo_id:
+        description: Header logo identifier
+        type: string
+    required:
+      - title
+      - subtitle
+      - logo_id
   FiscalCode:
     type: string
     description: User's fiscal code.
